--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./build",
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -11,6 +11,6 @@
     "noImplicitAny": false
   },
   "exclude": [
-    "node_modules",
+    "node_modules"
   ]
 }
